Added User Details to Auth Controller,Renamed RegisterController to AuthController
